refactor: Refatoração do pipe de data e do componente card-principal

--- a/src/app/pages/mars-weather-panel/mars-weather-panel.component.html
+++ b/src/app/pages/mars-weather-panel/mars-weather-panel.component.html
@@ -4,3 +4,4 @@
 ></app-page-title>
 <app-logout></app-logout>
 <app-carousel [weatherCards]="weatherCards"></app-carousel>
+<app-card-principal [weatherCard]="weatherCards[0]"></app-card-principal>
