feat:  Tela de Nova senha

--- a/src/app/theme/styles/theme.scss
+++ b/src/app/theme/styles/theme.scss
@@ -108,20 +108,31 @@ section {
 
 :root {
   // checkbox
-  --mdc-checkbox-selected-checkmark-color: #979797;
-  --mdc-checkbox-unselected-hover-icon-color: #b9b9b9;
   --mdc-checkbox-unselected-icon-color: #ffffff;
   --mdc-checkbox-unselected-focus-icon-color: #ffffff;
   --mdc-checkbox-unselected-focus-state-layer-color: #ffffff;
-  --mdc-checkbox-unselected-hover-state-layer-color: #793434;
-  --mdc-checkbox-unselected-pressed-state-layer-color: #ba8e73;
   --mdc-theme-text-primary-on-background: #ffffff;
+
+  --mdc-checkbox-selected-icon-color: #ba8e73;
+  --mdc-checkbox-selected-icon-color: #ba8e73;
+
+  .mdc-checkbox
+    .mdc-checkbox__native-control:enabled
+    ~ .mdc-checkbox__background
+    .mdc-checkbox__checkmark {
+    color: #fff;
+    background-color: #ba8e73;
+    border-color: #ba8e73;
+  }
+
   --mat-option-selected-state-label-text-color: #ba8e73;
-  
-  .mat-mdc-dialog-actions, .mdc-dialog__actions{
+
+  //Estiliza o modal
+  .mat-mdc-dialog-actions,
+  .mdc-dialog__actions {
     padding: 0;
   }
-  
+
   mat-dialog-content > p {
     width: 100%;
   }
@@ -134,21 +145,22 @@ section {
     border-radius: 0;
   }
 
-  .mat-mdc-dialog-container .mdc-dialog__container  {
+  .mat-mdc-dialog-container .mdc-dialog__container {
     border-radius: 0;
   }
   .mdc-dialog__content {
     overflow: none;
   }
 
-  .mat-mdc-dialog-title, .mdc-dialog__title{
-      padding-bottom: 16px 0;
-    }
- 
-  .mat-mdc-outlined-button:not(:disabled) {
-      border: 1px solid $black;
+  .mat-mdc-dialog-title,
+  .mdc-dialog__title {
+    padding-bottom: 16px 0;
   }
-  .cdk-overlay-pane{
+
+  .mat-mdc-outlined-button:not(:disabled) {
+    border: 1px solid $black;
+  }
+  .cdk-overlay-pane {
     border-radius: 0px;
   }
 
@@ -160,10 +172,17 @@ section {
   }
 
   // inputs
+  --mdc-outlined-text-field-input-text-color: #ffffff;
+  --mat-mdc-text-field-wrapper-color: #ffffff;
   --mdc-outlined-text-field-outline-color: #ffffff;
   --mdc-outlined-text-field-hover-outline-color: #b9b9b9;
   --mdc-outlined-text-field-label-text-color: #ffffff;
   --mdc-outlined-text-field-input-text-color: #ffffff;
+
+  // retira o asterisco do required
+  .mat-mdc-form-field-required-marker {
+    display: none;
+  }
 
   // button
   .mat-mdc-unelevated-button.mat-primary {
