adicao de card principal

--- a/src/app/pages/mars-weather-panel/mars-weather-panel.component.html
+++ b/src/app/pages/mars-weather-panel/mars-weather-panel.component.html
@@ -11,7 +11,10 @@
     </div>
     <app-logout></app-logout>
   </div>
-  <div class="main-card"></div>
+  <app-card-principal
+    [weatherCard]="weatherCards[weatherCards.length - 1]"
+    class="main-card"
+  ></app-card-principal>
   <app-carousel
     class="cards-carousel"
     [weatherCards]="weatherCards"
