Fix:Show Password Icon Added

--- a/src/app/auth/new-password/new-password.component.html
+++ b/src/app/auth/new-password/new-password.component.html
@@ -17,7 +17,14 @@
         <input 
           matInput 
           formControlName="password"
+          [type]="hideFirstPass ? 'password' : 'text'"
         >
+        <mat-icon 
+          matSuffix 
+          (click)="hideFirstPass= !hideFirstPass"
+        >
+          {{ hideFirstPass ? "visibility_off" : "visibility" }}
+      </mat-icon>
       </mat-form-field>
       <mat-error 
         class="input-error" 
