refactor: Refatora o serviço de modal e os componentes do painel de clima

--- a/src/app/pages/mars-weather-panel/mars-weather-panel.component.html
+++ b/src/app/pages/mars-weather-panel/mars-weather-panel.component.html
@@ -1,7 +1,4 @@
-<div
-  *ngIf="weatherCards.length"
-  class="mars-weather moon-centered-large-background"
->
+<div class="mars-weather moon-centered-large-background">
   <div class="weather-info">
     <div class="weather-title">
       <a class="back-arrow">
@@ -14,12 +11,14 @@
     </div>
     <app-logout></app-logout>
   </div>
-  <app-card-principal
-    [weatherCard]="weatherCards[weatherCards.length - 1]"
-    class="main-card"
-  ></app-card-principal>
-  <app-carousel
-    class="cards-carousel"
-    [weatherCards]="weatherCards"
-  ></app-carousel>
+  <div *ngIf="weatherCards.length">
+    <app-card-principal
+      [weatherCard]="weatherCards[weatherCards.length - 1]"
+      class="main-card"
+    ></app-card-principal>
+    <app-carousel
+      class="cards-carousel"
+      [weatherCards]="weatherCards"
+    ></app-carousel>
+  </div>
 </div>
