--- a/src/app/theme/components/dialog/dialog.component.html
+++ b/src/app/theme/components/dialog/dialog.component.html
@@ -27,7 +27,7 @@
     <p>{{ data.message }}</p>
   </mat-dialog-content>
   <div mat-dialog-actions>
-    <button mat-stroked-button color="primary" (click)="cancel()">
+    <button mat-stroked-button color="primary" (click)="onClick()">
       Finalizar
     </button>
   </div>
