Fix: Feedback Inputs e Botao de esconder senha

--- a/src/app/auth/new-password/new-password.component.html
+++ b/src/app/auth/new-password/new-password.component.html
@@ -33,20 +33,26 @@
         Preenchido de forma incorreta, tente novamente!
       </mat-error> 
       <mat-form-field appearance="outline" class="pass-confirm-input">
-          <mat-label>Digite novamente sua nova senha</mat-label>
-          <input 
-            matInput 
-            formControlName="passConfirmation" 
-            [type]="hideSecondPass ? 'password' : 'text'"
-          >
-          <mat-icon 
-            matSuffix 
-            (click)="hideSecondPass = !hideSecondPass"
-          >
-            {{ hideSecondPass ? "visibility_off" : "visibility" }}
-          </mat-icon>
-        </mat-form-field>
-      <div class="errors" *ngIf="formNewPassword?.get('password')?.touched || formNewPassword?.get('password')?.dirty">
+        <mat-label>Digite novamente sua nova senha</mat-label>
+        <input 
+          matInput 
+          formControlName="passConfirmation" 
+          [type]="hideSecondPass ? 'password' : 'text'"
+        >
+        <mat-icon 
+          matSuffix 
+          (click)="hideSecondPass = !hideSecondPass"
+        >
+          {{ hideSecondPass ? "visibility_off" : "visibility" }}
+        </mat-icon>
+      </mat-form-field>
+      <mat-error 
+        class="input-error" 
+        *ngIf="formNewPassword.get('passConfirmation')?.invalid && formNewPassword.get('passConfirmation')?.dirty"
+      >
+        Preenchido de forma incorreta, tente novamente!
+      </mat-error> 
+      <div class="errors" *ngIf="formNewPassword?.get('password')?.touched || formNewPassword?.get('password')?.dirty || formNewPassword?.get('passConfirmation')?.touched || formNewPassword?.get('passConfirmation')?.dirty ">
         <div 
           [ngStyle]="{ 'color': formNewPassword.get('password')?.errors?.['passwordSizeError'] ? '#e38686' : '#90dfa1' }" 
           class="ngErrors"
@@ -86,6 +92,17 @@
             alt="svg-checked"
           >
           Deve ter pelo menos 1 caractere especial: !@#
+        </div>
+
+        <div
+          [ngStyle]="{ color: formNewPassword.errors?.['passMissMatch'] ? '#e38686' : '#90dfa1' }" 
+          class="ngErrors"
+        >
+          <img 
+            [src]="formNewPassword.errors?.['passMissMatch'] ? '../../../assets/images/whiteChecked.svg' : '../../../assets/images/greenChecked.svg'"
+            alt="svg-checked"
+          >
+            Ambos os campos devem conter senhas iguais!
         </div>
       </div>
                 
