--- a/src/app/theme/styles/theme.scss
+++ b/src/app/theme/styles/theme.scss
@@ -88,14 +88,16 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background: url(../../../assets/images/background1.png) no-repeat center center fixed;
+  background: url(../../../assets/images/background1.png) no-repeat center
+    center fixed;
   background-size: cover;
   background-color: black;
   color: white;
 }
 
 .moon-centered-large-background {
-  background: url(../../../assets/images/background3.png) no-repeat center center fixed;
+  background: url(../../../assets/images/background3.png) no-repeat center
+    center fixed;
   opacity: 0.9;
 }
 
