ajuste background tela temperatura

--- a/src/app/pages/mars-weather-panel/mars-weather-panel.component.html
+++ b/src/app/pages/mars-weather-panel/mars-weather-panel.component.html
@@ -1,4 +1,4 @@
-<div class="mars-weather moon-centered-large-background">
+<div class="mars-weather">
   <div class="weather-info">
     <div class="weather-title">
       <a class="back-arrow">
