--- a/src/app/theme/styles/theme.scss
+++ b/src/app/theme/styles/theme.scss
@@ -96,7 +96,9 @@ body {
 
 .moon-centered-large-background {
   background: url(../../../assets/images/background3.png) no-repeat center center fixed;
-  opacity: 0.9;
+  background-size: cover;
+  background-color: black;
+  opacity: 0.35;
 }
 
 p,
