--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="grey-layer">
+<div class="moon-right-large-background">
   <section class="container">
     <section class="display-text">
       <h1>Bem vindo(a)!</h1>
