--- a/src/app/auth/new-password/new-password.component.html
+++ b/src/app/auth/new-password/new-password.component.html
@@ -1,4 +1,4 @@
-<div class="grey-layer">
+<div class="moon-right-large-background">
   <div class="new-password-container">
     <div class="info-panel">
       <div class="backward-page">
