--- a/src/app/auth/password-reset/password-reset.component.html
+++ b/src/app/auth/password-reset/password-reset.component.html
@@ -1,4 +1,4 @@
-<div class="grey-layer">
+<div class="moon-right-large-background">
   <div class="password-reset-container">
     <div class="info-panel">
       <div class="backward-page">
