--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<div class="grey-layer">
+<div class="moon-right-large-background">
   <div class="register-container">
     <div class="info-panel">
       <div class="text-info">
