--- a/src/app/theme/styles/theme.scss
+++ b/src/app/theme/styles/theme.scss
@@ -97,6 +97,7 @@ body {
     center fixed;
   background-size: cover;
   background-color: rgba(107, 159, 223, 0.081);
+  width: 100%;
 }
 
 .moon-centered-large-background {
