Fixture: Melhoria tela home

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -48,7 +48,7 @@
                             color="primary"
                             class="btn-enter enabled-btn"
                             type="submit"
-                            (click)="openNewTab('https://discord.gg/ZnRztRXk')"
+                            (click)="openNewTab('https://discord.gg/kCXUACrC3B')"
                         >
                             ENTRAR
                         </button>
