inserido em login link para tela cadastro

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -65,5 +65,11 @@
         </section>
       </section>
     </form>
+    <div class="goBackDiv">
+      <span>
+        Não tem uma conta?
+        <a class="go-back-sign-up" [routerLink]="'/auth/sign-up'"> Cadastre-se </a>
+      </span>
+    </div>
   </section>
 </div>
