refactor: refatora código e corrige erro no component

--- a/src/app/auth/newsletter-subscription/newsletter-subscription.component.scss
+++ b/src/app/auth/newsletter-subscription/newsletter-subscription.component.scss
@@ -10,17 +10,17 @@
 
 .text-info {
   width: 500px;
-}
 
-.text-info h1 {
-  font-size: 35px;
-  margin-bottom: 8px;
-  margin-left: 0px;
-}
+  h1 {
+    font-size: 35px;
+    margin-bottom: 8px;
+    margin-left: 0px;
+  }
 
-.text-info span {
-  font-size: 13px;
-  margin-left: -1px;
+  span {
+    font-size: 13px;
+    margin-left: -1px;
+  }
 }
 
 .container-form {
@@ -37,8 +37,8 @@
   margin-bottom: 0.5rem;
 }
 
-/* Estilos comuns para os botões */
-.common-btn-styles {
+// Mixin para estilos comuns de botões
+@mixin common-button-styles {
   width: 500px;
   border-radius: 0.35rem;
   font-size: 0.8rem;
@@ -48,9 +48,9 @@
   padding: 25px 0;
 }
 
-/* Estilos específicos para o botão de enviar/inscrever-se */
+// Botão de enviar/inscrever-se
 .send-btn {
-  @extend .common-btn-styles;
+  @include common-button-styles;
   background-color: var(--foundation-primary, #979797);
   color: #171717;
   margin-top: 1.5rem;
@@ -61,16 +61,17 @@
     opacity: 0.6;
     cursor: not-allowed;
   }
+
   &.valid-button-color {
-    color: #ffffff;
+    color: $white;
   }
 }
 
-/* Estilos para o botão válido (quando o formulário for válido) */
+// Estilos para o botão válido (quando o formulário for válido)
 .valid-button-color {
   background-color: var(--foundation-primary, #ba8e73);
   opacity: 1;
-  color: #ffffff;
+  color: $white;
 
   &:disabled {
     background-color: var(--foundation-primary, #ba8e73);
