--- a/src/app/auth/newsletter-subscription/newsletter-subscription.component.scss
+++ b/src/app/auth/newsletter-subscription/newsletter-subscription.component.scss
@@ -1,4 +1,5 @@
 @import "../../theme/styles/theme.scss";
+@import "../../theme/styles/mixins.scss";
 
 .wrapper {
   display: flex;
@@ -35,17 +36,6 @@
 .email-input {
   width: 100%;
   margin-bottom: 0.5rem;
-}
-
-// Mixin para estilos comuns de botões
-@mixin common-button-styles {
-  width: 500px;
-  border-radius: 0.35rem;
-  font-size: 0.8rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  cursor: pointer;
-  padding: 25px 0;
 }
 
 // Botão de enviar/inscrever-se
