--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -142,6 +142,7 @@
         color="primary"
         class="send-btn"
         [disabled]="formNewUser.invalid"
+        (click)="newUserBtnRequest()"
         [class.valid-button-color]="formNewUser.valid"
       >
         CRIAR CONTA
