--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -2,10 +2,20 @@
 
 @import '../../theme/styles/colors.scss';
 
+
+::ng-deep body {
+    background-image: url('../../../assets/images/background2.png');
+    background-repeat: no-repeat;
+    background-size: 200%;
+    background-position: center;
+    background-clip: padding-box;
+    overflow-y: hidden;
+}
+
 .mars-cards-container {
     display: flex;
     flex-direction: column;
-    padding: 50px
+    padding: 50px;
 }
 
 .greetings-panel {
@@ -23,74 +33,27 @@
     margin-bottom: 15px;
 }
 
-.highlighted-text {
-    color: $primary-500;
-}
-
-.cards-container {
-    margin-top: -15px;
+#app-page-title {
+    color: $primary-500
 }
 
 .mars-cards {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
 }
 
-.card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 450px;
-    width: 1207px;
-    margin: 20px;
-    color: $black;
-    border-radius: 10px;
-    background-color: $white;
+@keyframes zoomIn {
+    0% {
+        background-size: 100%
+    }
+
+    100% {
+        background-size: 200%
+    }
 }
 
-.card-info {
-    display: flex;
-    flex-direction: column;
-    align-content: space-between;
-    justify-content: space-between;
-    font-size: large;
-    height: 100%;
-    margin-top: 25px;
-    padding: 20px
-}
-
-.news-card-info {
-    margin-bottom: 20px;
-}
-
-img {
-    width: 100%;
-    height: 50%;
-    border-radius: 10px 10px 0px 0px;
-}
-
-.btn-enter {
-    width: 100%;
-    border: none;
-    padding: 1.2rem 0.3rem;
-    border-radius: 5px;
-    background: $primary-500;
-    box-shadow: 0px 0px;
-    color: $white;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    font-size: 0.8rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    cursor: pointer;
-}
-
-.enabled-btn:hover {
-    background: #F0C09C;
-}
-
-.disabled-btn {
-    background: #E0E0E0;
-    color: #BABABA;
-    cursor: default
+::ng-deep body {
+    /* This section calls the slideInFromLeft animation we defined above */
+    animation: 1s ease-out 0s 1 zoomIn;
 }
