--- a/src/app/theme/components/card-principal/card-principal.component.scss
+++ b/src/app/theme/components/card-principal/card-principal.component.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors.scss';
+
 // redefine tag p para não herdar estilos do mat-card
 ::ng-deep.mat-typography .paragraph-customization {
   margin: 0;
@@ -93,4 +95,20 @@
 .wrapper-max-temp img,
 .wrapper-min-temp img {
   margin-left: 10px;
+}
+
+.disabled-btn {
+  color: $primary-300;
+  display: inline-block;
+  pointer-events: none;
+}
+
+.enabled-btn {
+  text-decoration: none;
+  color: $primary-700;
+}
+
+.no-click {
+  display: inline-block;
+  text-decoration: underline;
 }
