--- a/src/app/auth/password-reset/password-reset.component.scss
+++ b/src/app/auth/password-reset/password-reset.component.scss
@@ -1,4 +1,5 @@
 @import "../../theme/styles/theme.scss";
+@import "../../theme/styles/mixins.scss";
 
 .password-reset-container {
   display: flex;
@@ -10,13 +11,23 @@
   margin: 0 auto;
 }
 
+.info-panel {
+  padding: 10px;
+}
+
+.text-info {
+  width: 100%;
+  margin-bottom: 1.5rem;
+  margin-right: 20px;
+}
+
 .container-form {
-  width: 500px;
+  width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 2.5rem 0 0 10rem;
+  margin-left: 20px;
 }
 
 .backward-page {
@@ -37,9 +48,14 @@ a {
 }
 
 .text-info h1 {
-  font-size: 35px;
-  margin-bottom: 8px;
+  font-size: 2rem;
+  margin-bottom: 1rem;
   margin-left: 0px;
+
+  @include responsive(sm) {
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+  }
 }
 
 .text-info span {
@@ -48,13 +64,13 @@ a {
 }
 
 mat-form-field {
-  width: 90%;
+  width: 100%;
 }
 
 .cancel-btn,
 .send-btn {
   height: 3.5rem;
-  width: 28.5rem;
+  width: 100%;
   opacity: 0.3;
   border-radius: 0.35rem;
   font-size: 0.8rem;
