--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -70,6 +70,7 @@ a {
 .input-section,
 .login-section {
   width: 50%;
+  max-width: 820px;
   display: flex;
   flex-direction: column;
   margin-bottom: 2rem;
