--- a/src/app/auth/sign-up/sign-up.component.scss
+++ b/src/app/auth/sign-up/sign-up.component.scss
@@ -1,66 +1,80 @@
-@import '../../theme/styles/theme.scss';
-@import '../../theme/styles/colors.scss';
-@import '../../theme/styles/mixins.scss';
+@import "../../theme/styles/theme.scss";
+@import "../../theme/styles/colors.scss";
+@import "../../theme/styles/mixins.scss";
 
-.moon-right-large-background{
-  height: 120vh;
-  @include responsive(sm) {
-    height: 150vh;
-  }
-  @include responsive(md) {
-    height: 160vh;
-  }
-  @include responsive(lg) {
-    height: 180vh;
-  }
-  
-}
 .register-container {
-  @include responsive(sm) {
-    width: 85%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 110vh;
+
+  @include responsive(md) {
+    height: 150svh;
   }
-
-  position: relative;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 40%;
-  height: 40%;
-  padding: 20px;
-  z-index: 1;
-}
-
-mat-error {
-  margin-top: -20px;
-  margin-left: 15px;
-  font-size: x-small;
 }
 
 .text-info h1 {
-  
-  @include responsive(sm) {
-    font-size: 2rem;
+  font-size: 3.5rem;
+  margin-bottom: 1.9rem;
+
+  @include responsive(lg) {
+    font-size: 3.2rem;
+    margin-bottom: 1.5rem;
   }
-    
-  font-size: 35px;
-  margin-bottom: 8px;
-  margin-left: 0px;
+
+  @include responsive(md) {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+  }
+
+  @include responsive(sm) {
+    font-size: 2.2rem;
+    margin-bottom: 0.5rem;
+  }
 }
 
 .text-info span {
-  @include responsive(sm) {
-      font-size: 0.8rem;
+  font-size: 1.4rem;
+  line-height: normal;
+  font-weight: normal;
+
+  @include responsive(lg) {
+    font-size: 1.2rem;
   }
 
-  font-size: 13px;
-  margin-left: -1px;
+  @include responsive(md) {
+    font-size: 1rem;
+  }
+
+  @include responsive(sm) {
+    font-size: 0.8rem;
+  }
 }
 
-::ng-deep mat-form-field,
-.errors {
+::ng-deep .mat-mdc-form-field {
   width: 100%;
-  margin-top: 20px;
-  
+}
+
+.info-panel,
+.input-section {
+  width: 50%;
+  max-width: 820px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2rem;
+
+  @include responsive(lg) {
+    width: 90%;
+  }
+
+  @include responsive(md) {
+    width: 90%;
+  }
+
+  @include responsive(sm) {
+    width: 90%;
+  }
 }
 
 .hidePass-btn {
