--- a/src/app/auth/password-reset/password-reset.component.scss
+++ b/src/app/auth/password-reset/password-reset.component.scss
@@ -7,27 +7,30 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  width: 100vw;
-  margin: 0 auto;
+  border: 1px solid palevioletred;
 }
 
 .info-panel {
-  padding: 10px;
+  border: 1px solid springgreen;
 }
 
 .text-info {
   width: 100%;
+  max-width: 820px;
   margin-bottom: 1.5rem;
   margin-right: 20px;
 }
 
 .container-form {
-  width: 82%;
+  width: 80%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-left: 20px;
+
+  border: 1px solid darkolivegreen;
 }
 
 .backward-page {
@@ -47,20 +50,27 @@ a {
   color: white;
 }
 
+.info-panel {
+  width: 90%;
+}
+
 .text-info h1 {
   font-size: 2rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   margin-left: 0px;
 
   @include responsive(sm) {
-    font-size: 1.5rem;
-    margin-bottom: 0.5rem;
+    font-size: 1.2rem;
+    margin-bottom: 0.2rem;
   }
 }
 
 .text-info span {
   font-size: 13px;
-  margin-left: -1px;
+
+  @include responsive(sm) {
+    font-size: 0.5rem;
+  }
 }
 
 mat-form-field {
