--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -40,7 +40,7 @@ p {
 }
 
 .error-message {
-  color: #ba8e73;
+  color: $primary-700;
   font-size: 0.8rem;
 }
 
@@ -76,14 +76,6 @@ a {
   margin-bottom: 2rem;
 
   @include responsive(lg) {
-    width: 90%;
-  }
-
-  @include responsive(md) {
-    width: 90%;
-  }
-
-  @include responsive(sm) {
     width: 90%;
   }
 }
