ajuste height mobile

--- a/src/app/auth/sign-up/sign-up.component.scss
+++ b/src/app/auth/sign-up/sign-up.component.scss
@@ -7,10 +7,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 110vh;
+  height: 120vh;
 
   @include responsive(md) {
-    height: 150svh;
+    height: 130vh;
+    padding-top: 4rem;
+    justify-content: flex-start;
   }
 }
 
@@ -65,14 +67,6 @@
   margin-bottom: 2rem;
 
   @include responsive(lg) {
-    width: 90%;
-  }
-
-  @include responsive(md) {
-    width: 90%;
-  }
-
-  @include responsive(sm) {
     width: 90%;
   }
 }
