--- a/src/app/auth/password-reset/password-reset.component.scss
+++ b/src/app/auth/password-reset/password-reset.component.scss
@@ -1,67 +1,66 @@
 @import "../../theme/styles/theme.scss";
 @import "../../theme/styles/mixins.scss";
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
 .password-reset-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  border: 1px solid palevioletred;
 }
 
 .info-panel {
-  border: 1px solid springgreen;
+  width: 90%;
+  margin-bottom: 1.5rem;
+
+  @include responsive(lg) {
+    width: 80%;
+  }
+
+  @include responsive(md) {
+    width: 75%;
+  }
+
+  @include responsive(sm) {
+    width: 92%;
+  }
+}
+
+.backward-page {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.material-icons {
+  font-size: 17px;
+  padding: 5px 20px 0px 0px;
 }
 
 .text-info {
-  width: 100%;
   max-width: 820px;
-  margin-bottom: 1.5rem;
-  margin-right: 20px;
 }
 
 .container-form {
-  width: 80%;
+  width: 75%;
 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-left: 20px;
-
-  border: 1px solid darkolivegreen;
-}
-
-.backward-page {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.material-icons {
-  margin-top: -30px;
-  font-size: 17px;
-  margin-right: 20px;
-}
-
-a {
-  text-decoration: none;
-  color: white;
-}
-
-.info-panel {
-  width: 90%;
 }
 
 .text-info h1 {
   font-size: 2rem;
-  margin-bottom: 0.5rem;
   margin-left: 0px;
 
   @include responsive(sm) {
-    font-size: 1.2rem;
-    margin-bottom: 0.2rem;
+    font-size: 1.8rem;
   }
 }
 
@@ -69,11 +68,11 @@ a {
   font-size: 13px;
 
   @include responsive(sm) {
-    font-size: 0.5rem;
+    font-size: 0.6rem;
   }
 }
 
-mat-form-field {
+::ng-deep mat-form-field {
   width: 100%;
 }
 
