--- a/src/app/auth/new-password/new-password.component.scss
+++ b/src/app/auth/new-password/new-password.component.scss
@@ -1,97 +1,130 @@
-@import '../../theme/styles/theme.scss';
-
-@import '../../theme/styles/colors.scss';
+@import "../../theme/styles/theme.scss";
+@import "../../theme/styles/colors.scss";
+@import "../../theme/styles/mixins.scss";
 
 .new-password-container {
-    position: fixed;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 40%;
-    height: 40%;
-    padding: 20px;
-    z-index: 1;
-}
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 
-mat-error {
-    margin-top: -20px;
-    margin-left: 15px;
-    font-size: x-small;
-}
-
-.backward-page {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  @include responsive(md) {
+    height: 120vh;
+    padding-top: 4rem;
+    justify-content: flex-start;
+  }
 }
 
 .text-info h1 {
-    font-size: 35px;
-    margin-bottom: 8px;
-    margin-left: 0px;
+  font-size: 3.5rem;
+  margin-bottom: 1.9rem;
+
+  @include responsive(lg) {
+    font-size: 3.2rem;
+    margin-bottom: 1.5rem;
+  }
+
+  @include responsive(md) {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+  }
+
+  @include responsive(sm) {
+    font-size: 2.2rem;
+    margin-bottom: 0.5rem;
+  }
 }
 
 .text-info span {
-    font-size: 13px;
-    margin-left: -1px;
+  font-size: 1.4rem;
+  line-height: normal;
+  font-weight: normal;
+
+  @include responsive(lg) {
+    font-size: 1.2rem;
+  }
+
+  @include responsive(md) {
+    font-size: 1rem;
+  }
+
+  @include responsive(sm) {
+    font-size: 0.8rem;
+  }
+}
+
+::ng-deep .mat-mdc-form-field {
+  width: 100%;
+}
+
+.info-panel,
+.input-section {
+  width: 50%;
+  max-width: 820px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 0.5rem;
+
+  @include responsive(lg) {
+    width: 90%;
+  }
 }
 
 ::ng-deep mat-form-field,
 .errors {
-    width: 100%;
-    margin-top: 20px;
+  width: 100%;
+  margin-top: 20px;
 }
 
-
 .hidePass-btn {
-    background-color: var(--foundation-primary);
-
+  background-color: var(--foundation-primary);
 }
 
 .ngErrors {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 img {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 .cancel-btn,
 .send-btn {
-    height: 3.5rem;
-    width: 100%;
-    margin-top: 20px;
-    border-radius: 0.35rem;
-    font-size: 0.8rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    cursor: pointer;
+  height: 3.5rem;
+  width: 100%;
+  margin-top: 20px;
+  border-radius: 0.35rem;
+  font-size: 0.8rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  cursor: pointer;
 }
 
 .cancel-btn {
-    background-color: var(--foundation-primary);
-    color: rgb(255, 255, 255);
-    opacity: 0.9;
-    border: 1px solid var(--foundation-gray-scale-gray-900, #47474e);
+  background-color: var(--foundation-primary);
+  color: rgb(255, 255, 255);
+  opacity: 0.9;
+  border: 1px solid var(--foundation-gray-scale-gray-900, #47474e);
 }
 
 .send-btn {
-    background-color: $gray-500;
-    color: #121417;
-    margin-top: 1.5rem;
-    opacity: 0.3;
-    cursor: default;
+  background-color: $gray-500;
+  color: #121417;
+  margin-top: 1.5rem;
+  opacity: 0.3;
+  cursor: default;
 }
 
 .valid-button-color {
-    background-color: $primary-500;
-    opacity: 1;
-    color: $white;
-    cursor: pointer;
+  background-color: $primary-500;
+  opacity: 1;
+  color: $white;
+  cursor: pointer;
 }
 
 .valid-button-color:hover {
-    background-color: $primary-300;
+  background-color: $primary-300;
 }
