--- a/src/app/auth/newsletter-subscription/newsletter-subscription.component.scss
+++ b/src/app/auth/newsletter-subscription/newsletter-subscription.component.scss
@@ -9,33 +9,59 @@
   height: 100vh;
 }
 
-.text-info {
-  width: 500px;
+.text-info h1 {
+  font-size: 3.5rem;
+  margin-bottom: 1.9rem;
 
-  h1 {
-    font-size: 35px;
-    margin-bottom: 8px;
-    margin-left: 0px;
+  @include responsive(lg) {
+    font-size: 3.2rem;
+    margin-bottom: 1.5rem;
   }
 
-  span {
-    font-size: 13px;
-    margin-left: -1px;
+  @include responsive(md) {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+  }
+
+  @include responsive(sm) {
+    font-size: 2.2rem;
+    margin-bottom: 0.5rem;
   }
 }
 
+.text-info span {
+  font-size: 1.4rem;
+  line-height: normal;
+  font-weight: normal;
+
+  @include responsive(lg) {
+    font-size: 1.2rem;
+  }
+
+  @include responsive(md) {
+    font-size: 1rem;
+  }
+
+  @include responsive(sm) {
+    font-size: 0.8rem;
+  }
+}
+
+::ng-deep .mat-mdc-form-field {
+  width: 100%;
+}
+
+.text-info,
 .container-form {
-  width: 500px;
+  width: 50%;
+  max-width: 820px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: 2.5rem;
-}
+  margin-bottom: 2rem;
 
-.email-input {
-  width: 100%;
-  margin-bottom: 0.5rem;
+  @include responsive(lg) {
+    width: 90%;
+  }
 }
 
 // Botão de enviar/inscrever-se
