--- a/src/app/auth/password-reset/password-reset.component.scss
+++ b/src/app/auth/password-reset/password-reset.component.scss
@@ -15,7 +15,7 @@ a {
 }
 
 .info-panel {
-  width: 90%;
+  width: 60%;
   margin-bottom: 1.5rem;
 
   @include responsive(lg) {
@@ -41,34 +41,51 @@ a {
   padding: 5px 20px 0px 0px;
 }
 
-.text-info {
-  max-width: 820px;
-}
-
 .container-form {
-  width: 75%;
-
+  width: 58%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-left: 20px;
-}
+  margin-left: 38px;
 
-.text-info h1 {
-  font-size: 2rem;
-  margin-left: 0px;
+  @include responsive(lg) {
+    width: 75%;
+    margin-left: 25px;
+  }
+
+  @include responsive(md) {
+    width: 70%;
+    margin-left: 25px;
+  }
 
   @include responsive(sm) {
-    font-size: 1.8rem;
+    width: 80%;
+    margin-left: 25px;
   }
 }
 
-.text-info span {
-  font-size: 13px;
+.text-info {
+  h1 {
+    font-size: 3rem;
+    margin-bottom: 0.8rem;
 
-  @include responsive(sm) {
-    font-size: 0.6rem;
+    @include responsive(lg) {
+      font-size: 2.5rem;
+    }
+
+    @include responsive(sm) {
+      font-size: 1.8rem;
+      margin-bottom: 0.2rem;
+    }
+  }
+
+  span {
+    font-size: 1rem;
+
+    @include responsive(sm) {
+      font-size: 0.6rem;
+    }
   }
 }
 
@@ -90,14 +107,14 @@ a {
 
 .cancel-btn {
   background-color: var(--foundation-primary);
-  color: #fff;
+  color: $white;
   opacity: 0.9;
   border: 1px solid var(--foundation-gray-scale-gray-900, #47474e);
 }
 
 .send-btn {
   background-color: var(--foundation-primary, #979797);
-  color: #171717;
+  color: $black;
   margin-top: 1.5rem;
 }
 
