--- a/src/app/auth/new-password/new-password.component.scss
+++ b/src/app/auth/new-password/new-password.component.scss
@@ -10,43 +10,42 @@
   height: 100vh;
 
   @include responsive(md) {
-    height: 120vh;
     padding-top: 4rem;
     justify-content: flex-start;
   }
 }
 
 .text-info h1 {
-  font-size: 3.5rem;
-  margin-bottom: 1.9rem;
+  font-size: 2.8rem;
+  margin-bottom: 1.5rem;
 
   @include responsive(lg) {
-    font-size: 3.2rem;
-    margin-bottom: 1.5rem;
+    font-size: 2.6rem;
+    margin-bottom: 1.4rem;
   }
 
   @include responsive(md) {
-    font-size: 3rem;
-    margin-bottom: 1rem;
+    font-size: 2.4rem;
+    margin-bottom: 0.8rem;
   }
 
   @include responsive(sm) {
     font-size: 2.2rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.3rem;
   }
 }
 
 .text-info span {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   line-height: normal;
   font-weight: normal;
 
   @include responsive(lg) {
-    font-size: 1.2rem;
+    font-size: 1.0rem;
   }
 
   @include responsive(md) {
-    font-size: 1rem;
+    font-size: 0.9rem;
   }
 
   @include responsive(sm) {
@@ -60,7 +59,7 @@
 
 .info-panel,
 .input-section {
-  width: 50%;
+  width: 40%;
   max-width: 820px;
   display: flex;
   flex-direction: column;
@@ -74,7 +73,7 @@
 ::ng-deep mat-form-field,
 .errors {
   width: 100%;
-  margin-top: 20px;
+  margin-top: 0.7rem;
 }
 
 .hidePass-btn {
