--- a/src/app/auth/newsletter-subscription/newsletter-subscription.component.scss
+++ b/src/app/auth/newsletter-subscription/newsletter-subscription.component.scss
@@ -10,36 +10,36 @@
 }
 
 .text-info h1 {
-  font-size: 3.5rem;
-  margin-bottom: 1.9rem;
+  font-size: 2.8rem;
+  margin-bottom: 1.5rem;
 
   @include responsive(lg) {
-    font-size: 3.2rem;
-    margin-bottom: 1.5rem;
+    font-size: 2.6rem;
+    margin-bottom: 1.4rem;
   }
 
   @include responsive(md) {
-    font-size: 3rem;
-    margin-bottom: 1rem;
+    font-size: 2.4rem;
+    margin-bottom: 0.8rem;
   }
 
   @include responsive(sm) {
     font-size: 2.2rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.3rem;
   }
 }
 
 .text-info span {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   line-height: normal;
   font-weight: normal;
 
   @include responsive(lg) {
-    font-size: 1.2rem;
+    font-size: 1.0rem;
   }
 
   @include responsive(md) {
-    font-size: 1rem;
+    font-size: 0.9rem;
   }
 
   @include responsive(sm) {
@@ -47,17 +47,19 @@
   }
 }
 
-::ng-deep .mat-mdc-form-field {
+::ng-deep mat-form-field,
+.errors {
   width: 100%;
+  margin-top: 0.7rem;
 }
 
 .text-info,
 .container-form {
-  width: 50%;
+  width: 40%;
   max-width: 820px;
   display: flex;
   flex-direction: column;
-  margin-bottom: 2rem;
+  margin-bottom: 0.8rem;
 
   @include responsive(lg) {
     width: 90%;
