ajustes variaveis de cor

--- a/src/app/auth/new-password/new-password.component.scss
+++ b/src/app/auth/new-password/new-password.component.scss
@@ -76,10 +76,6 @@
   margin-top: 0.7rem;
 }
 
-.hidePass-btn {
-  background-color: var(--foundation-primary);
-}
-
 .ngErrors {
   display: flex;
   flex-direction: row;
@@ -103,15 +99,15 @@ img {
 }
 
 .cancel-btn {
-  background-color: var(--foundation-primary);
-  color: rgb(255, 255, 255);
+  background-color: $foundation-primary;
+  color: $white;
   opacity: 0.9;
-  border: 1px solid var(--foundation-gray-scale-gray-900, #47474e);
+  border: 1px solid $gray-900;
 }
 
 .send-btn {
   background-color: $gray-500;
-  color: #121417;
+  color: $black;
   margin-top: 1.5rem;
   opacity: 0.3;
   cursor: default;
